Implement basic framework and logic
Implement basic objects like cells, board, and rules. Also establish
the basic interactions and logic amongst these objects. That said, we're
still missing a user interface that draws the board, and an efficient IO
that writes board configurations to disk.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Files that I want to ignore.
 *~
 tags
+output/*
 
 # Vim files
 *.swp
@@ -134,3 +135,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Files I want to keep.
+!.gitkeep
